testsuite/poke.pkl/offsets-diag-3.pk
/* { dg-do compile } */

var a =
  2#B as offset<uint<32>,
                512B>; /* { dg-error "signed overflow.*\n.*" } */
